[package]
name = "blockchain"
version = "0.1.0"
authors = ["PoorlyDefinedBehaviour <brunotj2015@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
openssl = { version = "0.10.36", features = ["vendored"] }
sha2 = "0.9.5"
hex = "0.4.3"
libp2p = { version = "0.39.1", features = ["tcp-tokio"] }
tokio = { version = "1.12.0", features = ["full"] }
futures = "0.3.17"
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }